tests/test89.rael.exp
Error [1:17]: Index too big
| log "string" at 8
|                 ^
